--- a/src/custom.css
+++ b/src/custom.css
@@ -171,3 +171,9 @@ ul.navbar-nav li.active a {
   margin: auto;
   max-height: 100%;
 }
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .box .text-xs {
+    font-size: 0.5rem;
+  }
+}
