--- a/src/custom.css
+++ b/src/custom.css
@@ -4,12 +4,14 @@
 
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 4px rgba(160, 159, 159, 0.8);
+  box-shadow: inset 0 0 4px rgba(160, 159, 159, 0.8);
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 4px rgba(131, 131, 131, 0.8);
+  box-shadow: inset 0 0 4px rgba(131, 131, 131, 0.8);
 }
 
 .no-padding {
