--- a/src/custom.css
+++ b/src/custom.css
@@ -237,6 +237,9 @@ ul.navbar-nav li.active a {
   font-weight: 100;
 }
 
+.card-icon {
+  width: 3rem;
+}
 .card-value {
   font-size: 0.8rem;
   font-weight: 600;
